filter blog on category basis

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -6,3 +6,8 @@
 *{
   font-family: "Outfit", sans-serif;
 }
+#root{
+  background-image: url('./assets/bg.avif');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
