--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -11,3 +11,9 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.active{
+  background-color: #3B25C1;
+  color: white;
+  border-radius: 4px;
+}
