--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -7,7 +7,7 @@
   font-family: "Outfit", sans-serif;
 }
 #root{
-  background-image: url('./assets/bg.avif');
+  background-image: url('./assets/bg.webp');
   background-repeat: no-repeat;
   background-size: cover;
 }
